# drl-graph-partitioning

./: LICENSE  README.md  requirements.txt
partitioning/: drl_partitioning_coarsest_train.py  drl_partitioning_test.py  drl_partitioning_train.py
partitioning/scotch/: CMakeLists.txt  SCOTCHWrapper.cpp
separator/: drl_nd_testing.py  drl_separator_test.py  drl_separator_train.py
separator/amd/: AMDReordering.cpp  CMakeLists.txt  build.sh
separator/scotch/: build.sh
